// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldDate__Picker /> should render correctly 1`] = `
<DatePicker
  allowTextInput={false}
  borderless={false}
  className=""
  firstDayOfWeek={0}
  firstWeekOfYear={0}
  formatDate={[Function]}
  highlightCurrentMonth={false}
  isMonthPickerVisible={true}
  isRequired={false}
  parseDateFromString={[Function]}
  pickerAriaLabel="Calender"
  showGoToToday={true}
  showMonthPickerAsOverlay={false}
  showWeekNumbers={false}
  strings={
    Object {
      "days": Array [
        "Sunday",
        "Monday",
        "Tuesday",
        "Wednesday",
        "Thursday",
        "Friday",
        "Saturday",
      ],
      "goToToday": "Go to today",
      "months": Array [
        "January",
        "February",
        "March",
        "April",
        "May",
        "June",
        "July",
        "August",
        "September",
        "October",
        "November",
        "December",
      ],
      "nextMonthAriaLabel": "Go to next month",
      "nextYearAriaLabel": "Go to next year",
      "prevMonthAriaLabel": "Go to previous month",
      "prevYearAriaLabel": "Go to previous year",
      "shortDays": Array [
        "S",
        "M",
        "T",
        "W",
        "T",
        "F",
        "S",
      ],
      "shortMonths": Array [
        "Jan",
        "Feb",
        "Mar",
        "Apr",
        "May",
        "Jun",
        "Jul",
        "Aug",
        "Sep",
        "Oct",
        "Nov",
        "Dec",
      ],
    }
  }
/>
`;

exports[`FieldDate should render correctly 1`] = `
<FieldDate__Picker
  errorMessage={null}
  highlightCurrentMonth={true}
  name="test name"
  onSelectDate={[Function]}
  options={
    Array [
      Object {
        "key": "key1",
        "text": "text 1",
      },
      Object {
        "key": "key2",
        "text": "text 2",
      },
      Object {
        "key": "key3",
        "text": "text 3",
      },
    ]
  }
  value={null}
/>
`;

exports[`Picker should render properly when disabled 1`] = `
.c0 .ms-Icon {
  display: none;
}

<DatePicker
  allowTextInput={false}
  borderless={false}
  className="c0"
  disabled={true}
  firstDayOfWeek={0}
  firstWeekOfYear={0}
  formatDate={[Function]}
  highlightCurrentMonth={false}
  isMonthPickerVisible={true}
  isRequired={false}
  parseDateFromString={[Function]}
  pickerAriaLabel="Calender"
  showGoToToday={true}
  showMonthPickerAsOverlay={false}
  showWeekNumbers={false}
  strings={
    Object {
      "days": Array [
        "Sunday",
        "Monday",
        "Tuesday",
        "Wednesday",
        "Thursday",
        "Friday",
        "Saturday",
      ],
      "goToToday": "Go to today",
      "months": Array [
        "January",
        "February",
        "March",
        "April",
        "May",
        "June",
        "July",
        "August",
        "September",
        "October",
        "November",
        "December",
      ],
      "nextMonthAriaLabel": "Go to next month",
      "nextYearAriaLabel": "Go to next year",
      "prevMonthAriaLabel": "Go to previous month",
      "prevYearAriaLabel": "Go to previous year",
      "shortDays": Array [
        "S",
        "M",
        "T",
        "W",
        "T",
        "F",
        "S",
      ],
      "shortMonths": Array [
        "Jan",
        "Feb",
        "Mar",
        "Apr",
        "May",
        "Jun",
        "Jul",
        "Aug",
        "Sep",
        "Oct",
        "Nov",
        "Dec",
      ],
    }
  }
/>
`;

exports[`Picker should render properly when not disabled 1`] = `
<DatePicker
  allowTextInput={false}
  borderless={false}
  className=""
  disabled={false}
  firstDayOfWeek={0}
  firstWeekOfYear={0}
  formatDate={[Function]}
  highlightCurrentMonth={false}
  isMonthPickerVisible={true}
  isRequired={false}
  parseDateFromString={[Function]}
  pickerAriaLabel="Calender"
  showGoToToday={true}
  showMonthPickerAsOverlay={false}
  showWeekNumbers={false}
  strings={
    Object {
      "days": Array [
        "Sunday",
        "Monday",
        "Tuesday",
        "Wednesday",
        "Thursday",
        "Friday",
        "Saturday",
      ],
      "goToToday": "Go to today",
      "months": Array [
        "January",
        "February",
        "March",
        "April",
        "May",
        "June",
        "July",
        "August",
        "September",
        "October",
        "November",
        "December",
      ],
      "nextMonthAriaLabel": "Go to next month",
      "nextYearAriaLabel": "Go to next year",
      "prevMonthAriaLabel": "Go to previous month",
      "prevYearAriaLabel": "Go to previous year",
      "shortDays": Array [
        "S",
        "M",
        "T",
        "W",
        "T",
        "F",
        "S",
      ],
      "shortMonths": Array [
        "Jan",
        "Feb",
        "Mar",
        "Apr",
        "May",
        "Jun",
        "Jul",
        "Aug",
        "Sep",
        "Oct",
        "Nov",
        "Dec",
      ],
    }
  }
/>
`;
